# game24-hs

./: flake.nix  game24-hs.cabal
src/: Expr.hs  ExprParser.hs  Main.hs  ParserUtils.hs
