cabal-version:      3.0
name:               game24-hs
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
category:           Game
build-type:         Simple

common warnings
    ghc-options: -Wall
executable game24-hs
    import:
    
    main-is:          Main.hs

    other-modules:    Expr,
                      ExprParser,
                      ParserUtils,
                      
    default-extensions: OverloadedStrings

    build-depends:    haskeline ^>=0.8.2.1,
                      multiset ^>= 0.3.4.3,
                      mtl ^>=2.3.1,
                      containers ^>=0.8,
                      random ^>=1.3.0.0,
                      transformers ^>=0.6.1.1,
                      text ^>=2.1.3,
                      parser-combinators ^>=1.3.1,
                      megaparsec ^>=9.7.0,
                      base ^>=4.22.0.0,

    hs-source-dirs:   src

    default-language: GHC2024
